src/test/ui/unused/unused-macro-with-follow-violation.stderr
error: `$e:expr` is followed by `+`, which is not allowed for `expr` fragments
  --> $DIR/unused-macro-with-follow-violation.rs:14:14
   |
LL |     ($e:expr +) => () //~ ERROR not allowed for `expr` fragments
   |              ^ not allowed after `expr` fragments
   |
   = note: allowed there are: `;`, `=>` or `,`

error: aborting due to previous error

